@@ -18,7 +18,7 @@ import com.liferay.portal.kernel.io.unsync.UnsyncBufferedReader;
 import com.liferay.portal.kernel.io.unsync.UnsyncStringReader;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
-import com.liferay.portal.kernel.search.util.SearchUtil;
+import com.liferay.portal.kernel.search.highlight.HighlightUtil;
 import com.liferay.portal.kernel.security.RandomUtil;
 
 import java.io.IOException;
@@ -226,21 +226,14 @@ public class StringUtil {
 	 * @return the string representing the bytes in hexadecimal form
 	 */
 	public static String bytesToHexString(byte[] bytes) {
-		StringBundler sb = new StringBundler(bytes.length * 2);
+		char[] chars = new char[bytes.length * 2];
 
-		for (byte b : bytes) {
-			String hex = Integer.toHexString(0x0100 + (b & 0x00FF));
-
-			hex = hex.substring(1);
-
-			if (hex.length() < 2) {
-				sb.append("0");
-			}
-
-			sb.append(hex);
+		for (int i = 0; i < bytes.length; i++) {
+			chars[i * 2] = HEX_DIGITS[(bytes[i] & 0xFF) >> 4];
+			chars[i * 2 + 1] = HEX_DIGITS[bytes[i] & 0x0F];
 		}
 
-		return sb.toString();
+		return new String(chars);
 	}
 
 	/**
@@ -355,7 +348,7 @@ public class StringUtil {
 	 *         character, ignoring case; <code>false</code> otherwise
 	 */
 	public static boolean endsWith(String s, char end) {
-		return endsWith(s, (new Character(end)).toString());
+		return endsWith(s, (Character.valueOf(end)).toString());
 	}
 
 	/**
@@ -687,23 +680,23 @@ public class StringUtil {
 	}
 
 	/**
-	 * @deprecated As of 7.0.0, moved to {@link SearchUtil#highlight(String,
+	 * @deprecated As of 7.0.0, moved to {@link HighlightUtil#highlight(String,
 	 *             String[])}}
 	 */
 	@Deprecated
 	public static String highlight(String s, String[] queryTerms) {
-		return SearchUtil.highlight(s, queryTerms);
+		return HighlightUtil.highlight(s, queryTerms);
 	}
 
 	/**
-	 * @deprecated As of 7.0.0, moved to {@link SearchUtil#highlight(String,
+	 * @deprecated As of 7.0.0, moved to {@link HighlightUtil#highlight(String,
 	 *             String[], String, String)}}
 	 */
 	@Deprecated
 	public static String highlight(
 		String s, String[] queryTerms, String highlight1, String highlight2) {
 
-		return SearchUtil.highlight(s, queryTerms, highlight1, highlight2);
+		return HighlightUtil.highlight(s, queryTerms, highlight1, highlight2);
 	}
 
 	/**
@@ -3658,7 +3651,7 @@ public class StringUtil {
 	 *         specified character; <code>false</code> otherwise
 	 */
 	public static boolean startsWith(String s, char begin) {
-		return startsWith(s, (new Character(begin)).toString());
+		return startsWith(s, (Character.valueOf(begin)).toString());
 	}
 
 	/**
@@ -3766,6 +3759,36 @@ public class StringUtil {
 		sb.append(s.substring(y));
 
 		return sb.toString();
+	}
+
+	/**
+	 * Returns a string representing the string <code>s</code> with all
+	 * occurrences of the specified characters removed.
+	 *
+	 * <p>
+	 * Example:
+	 * </p>
+	 *
+	 * <p>
+	 * <pre>
+	 * <code>
+	 * strip("Hello World", {' ', 'l', 'd'}) returns "HeoWor"
+	 * </code>
+	 * </pre>
+	 * </p>
+	 *
+	 * @param  s the string from which to strip all occurrences the characters
+	 * @param  remove the characters to strip from the string
+	 * @return a string representing the string <code>s</code> with all
+	 *         occurrences of the specified characters removed, or
+	 *         <code>null</code> if <code>s</code> is <code>null</code>
+	 */
+	public static String strip(String s, char[] remove) {
+		for (char c : remove) {
+			s = strip(s, c);
+		}
+
+		return s;
 	}
 
 	/**
@@ -3925,7 +3948,7 @@ public class StringUtil {
 		int index = 8;
 
 		do {
-			buffer[--index] = _HEX_DIGITS[i & 15];
+			buffer[--index] = HEX_DIGITS[i & 15];
 
 			i >>>= 4;
 		}
@@ -3960,7 +3983,7 @@ public class StringUtil {
 		int index = 16;
 
 		do {
-			buffer[--index] = _HEX_DIGITS[(int) (l & 15)];
+			buffer[--index] = HEX_DIGITS[(int) (l & 15)];
 
 			l >>>= 4;
 		}
@@ -4712,6 +4735,11 @@ public class StringUtil {
 		}
 	}
 
+	protected static final char[] HEX_DIGITS = {
+		'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd',
+		'e', 'f'
+	};
+
 	/**
 	 * Returns <code>false</code> if the character is not whitespace or is equal
 	 * to any of the exception characters.
@@ -4805,11 +4833,6 @@ public class StringUtil {
 
 		return sb.toString();
 	}
-
-	private static final char[] _HEX_DIGITS = {
-		'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd',
-		'e', 'f'
-	};
 
 	private static final char[] _RANDOM_STRING_CHAR_TABLE = {
 		'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D',
